Add active class to tabs list items when page is displayed.

--- a/css/main.css
+++ b/css/main.css
@@ -11,6 +11,11 @@ header{
 .nav > li > a {
     background-color: white;
 }
+
+.active {
+    font-weight: bold;
+}
+
 #left_column {
 	clear: both;
 	float: left;
